--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -39,7 +39,7 @@
 
 /* ADDED CSS FOR DISH LIST ITEM NEED TO MOVE TO A BETTER STYLESHEET LATER */
 .dish-card{
-  display: flex;
+  /* display: flex; */
   flex-direction: row;
   align-items: stretch;
 }
