--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -5,90 +5,113 @@
   font-weight: 600;
   font-family: Bebas Neue;
   text-transform: uppercase;
-  font-size: 30px;
+  font-size: 70px;
+  text-decoration: underline;
 }
 
 .menu {
   font-family: Raleway;
   background-color: rgba(237, 237, 236, 255);
   font-weight: 300;
+  font-size: 25px;
 }
 
-.menu-items {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
+.menu-items {}
 
 .menu-title {
   font-family: Abril Fatface;
-  font-size: 70px;
+  font-size: 120px;
   margin-top: 0px;
 }
 
 .menu-1 {
-  border: 1px solid;
   padding: 40px;
-  max-width: 20em;
+  column-count: 2;
+  text-align: center;
+  margin-top: 4em;
 }
 
 
 .menu-2 {
-  border: 1px solid;
   padding: 40px;
-  max-width: 20em;
+  column-count: 2;
+  text-align: center;
+  margin-top: 4em;
+
 
 }
 
 .menu-3 {
-  border: 1px solid;
   padding: 40px;
-  max-width: 20em;
+  column-count: 2;
+  text-align: center;
+  margin-top: 4em;
+
 
 }
 
 
 .menu-4 {
-  border: 1px solid;
   padding: 40px;
-  max-width: 20em;
+  column-count: 2;
+  text-align: center;
+  margin-top: 4em;
+
 
 }
 
 
 .menu-5 {
-  border: 1px solid;
   padding: 40px;
-  max-width: 20em;
+  column-count: 2;
+  text-align: center;
+  margin-top: 4em;
+
 
 }
 
 
 .menu-6 {
-  border: 1px solid;
   padding: 40px;
-  max-width: 20em;
+  column-count: 2;
+  text-align: center;
+  margin-top: 4em;
+
 
 }
 
 
 .menu-7 {
-  border: 1px solid;
   padding: 40px;
-  max-width: 20em;
+  column-count: 2;
+  text-align: center;
+  margin-top: 4em;
 
 }
 
 .menu-8 {
-  border: 1px solid;
   padding: 40px;
-  max-width: 20em;
+  column-count: 2;
+  text-align: center;
+  margin-top: 4em;
 
 }
 
 .menu-9 {
-  border: 1px solid;
   padding: 40px;
-  max-width: 20em;
+  column-count: 2;
+  text-align: center;
+  margin-top: 4em;
 
+}
+
+ul>li>a {
+  font-family: Bebas Neue;
+  text-transform: capitalize;
+  font-size: 45px;
+  color: black
+}
+
+ul>li {
+  font-size: 30px;
 }
