Added Categories selecter bar and a carosel for featured items.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -39,9 +39,7 @@
 
 /* ADDED CSS FOR DISH LIST ITEM NEED TO MOVE TO A BETTER STYLESHEET LATER */
 .dish-card{
-  /* display: flex; */
-  flex-direction: row;
-  align-items: stretch;
+  display: block;
 }
 
 .dish-info{
