Fixed a little styling.

--- a/frontend/src/styles/DishList.scss
+++ b/frontend/src/styles/DishList.scss
@@ -11,3 +11,13 @@ ul {
   border: solid;
   margin: 2rem;
 }
+
+.dish-info{
+  display: flex;
+  flex-direction: column;
+  
+}
+
+.img-size{
+  width: 35%;
+}
