--- a/frontend/src/styles/MenuModal.scss
+++ b/frontend/src/styles/MenuModal.scss
@@ -10,3 +10,9 @@
   overflow-y: scroll;
   border-radius: 12px;
 }
+
+.modal-content img {
+  margin-top: 26px;
+  max-width: 600px;
+  border-radius: 4px;
+}
