--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -16,7 +16,13 @@
   font-size: 25px;
 }
 
-.menu-items {}
+.menu-items {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  /* Creates a 2-column grid layout */
+  gap: 20px;
+  /* Provides equal spacing between each grid item */
+}
 
 .menu-title {
   font-family: Abril Fatface;
