--- a/frontend/src/styles/LoginModal.scss
+++ b/frontend/src/styles/LoginModal.scss
@@ -9,4 +9,74 @@
   width: 55%;
   overflow-y: scroll;
   border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.login-modal__form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.login-modal__close {
+  background-color: white;
+  border: none;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 24px;
+  cursor: pointer;
+  margin-left: 16px;
+  margin-top: 16px;
+  align-self: flex-start;
+}
+
+.login-modal__header {
+  text-align: center;
+  text-decoration: none;
+  padding-left: 6px;
+  margin-left: 16px;
+  margin-top: 16px;
+  font-size: 24px;
+  font-weight: 700;
+  align-self: flex-start;
+}
+
+input {
+  margin: 8px;
+  width: 320px;
+  font-size: 0.875rem;
+  font-weight: 400;
+  line-height: 1.5;
+  padding: 8px 12px;
+  border-radius: 8px;
+  border: 1px solid rgba(128, 128, 128, 0.300);
+  background: #fff;
+  color: rgba(128, 128, 128, 0.900);
+
+  &:hover {
+    background: rgba(128, 128, 128, 0.100);
+    border-color: rgba(128, 128, 128, 0.400);
+    ;
+  }
+
+  &:focus {
+    outline: 3px solid rgba(0, 0, 255, 0.100);
+  }
+}
+
+.login-modal__submit {
+  margin: 8px;
+  font-size: 0.875rem;
+  line-height: 1.5;
+  background-color: rgba(0, 0, 255, 0.500);
+  color: white;
+  border-radius: 8px;
+  font-weight: 600;
+  padding: 8px 16px;
+  cursor: pointer;
+  transition: all 150ms ease;
+  border: none;
 }
