menu click toggle menu

--- a/frontend/src/styles/MenuModal.scss
+++ b/frontend/src/styles/MenuModal.scss
@@ -12,7 +12,7 @@
 }
 
 .modal-content img {
-  margin-top: 44px;
-  max-width: 656px;
+  margin-top: 40px;
+  max-width: 90%;
   border-radius: 15px;
 }
