--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -206,3 +206,10 @@ hr {
   margin-left: 30em;
   margin-right: 30em;
 }
+
+div a {
+  font-family: Bebas Neue;
+  text-transform: capitalize;
+  font-size: 45px;
+  color: black
+}
