add css to modal

--- a/frontend/src/styles/MenuModal.scss
+++ b/frontend/src/styles/MenuModal.scss
@@ -15,4 +15,10 @@
   margin-top: 40px;
   max-width: 90%;
   border-radius: 15px;
+
+}
+
+.modal-content p {
+  font-size: 35px;
+  font-weight: 400;
 }
