--- a/frontend/src/styles/MenuModal.scss
+++ b/frontend/src/styles/MenuModal.scss
@@ -22,3 +22,9 @@
   font-size: 26px;
   font-weight: 400;
 }
+
+/* Add this CSS to your MenuModal.scss or your stylesheet */
+.heart-icon.favorite {
+  color: red;
+  /* Change the color to red when favorited */
+}
