--- a/frontend/src/styles/DishList.scss
+++ b/frontend/src/styles/DishList.scss
@@ -10,6 +10,7 @@ ul {
 .border {
   border: solid;
   margin: 2rem;
+  border-radius: 5.0%;
 }
 
 .dish-info{
@@ -19,5 +20,10 @@ ul {
 }
 
 .img-size{
-  width: 35%;
+  width: 45%;
+  border-radius: 10%;
 }
+
+// img {
+//   border-radius: 10%;
+// }
