--- a/frontend/src/styles/PastOrderModal.scss
+++ b/frontend/src/styles/PastOrderModal.scss
@@ -1,7 +1,8 @@
 .border {
-  // display:flex;
-  // flex-direction: column;
   border: solid;
+  margin: 1.5rem;
+  border-radius: 5%;
+  border-width: thin;
 }
 
 table {
