--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -6,6 +6,7 @@
   font-family: Bebas Neue;
   text-transform: uppercase;
   font-size: 70px;
+  margin-left: 45%;
 
 }
 
@@ -30,6 +31,7 @@
   font-family: Abril Fatface;
   font-size: 120px;
   margin-top: 0px;
+  margin-left: 45%;
 }
 
 .menu-1 {
