--- a/frontend/src/styles/TableFloorMap.css
+++ b/frontend/src/styles/TableFloorMap.css
@@ -152,3 +152,195 @@
   border-radius: 5px;
   cursor: pointer;
 }
+
+.but-8 {
+  position: absolute;
+  /* Position button relative to .imageContainer */
+  top: 50.2%;
+  left: 9%;
+  /* Position button to the middle horizontally */
+  transform: translate(-50%, -50%);
+  /* Center button */
+  /* Style your button further if needed */
+  padding: 3px 9px;
+  border: none;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.but-9 {
+  position: absolute;
+  /* Position button relative to .imageContainer */
+  top: 50.2%;
+  left: 23.5%;
+  /* Position button to the middle horizontally */
+  transform: translate(-50%, -50%);
+  /* Center button */
+  /* Style your button further if needed */
+  padding: 3px 9px;
+  border: none;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.but-10 {
+  position: absolute;
+  /* Position button relative to .imageContainer */
+  top: 50.2%;
+  left: 38%;
+  /* Position button to the middle horizontally */
+  transform: translate(-50%, -50%);
+  /* Center button */
+  /* Style your button further if needed */
+  padding: 3px 9px;
+  border: none;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.but-11 {
+  position: absolute;
+  /* Position button relative to .imageContainer */
+  top: 71.2%;
+  left: 8.5%;
+  /* Position button to the middle horizontally */
+  transform: translate(-50%, -50%);
+  /* Center button */
+  /* Style your button further if needed */
+  padding: 3px 9px;
+  border: none;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.but-12 {
+  position: absolute;
+  /* Position button relative to .imageContainer */
+  top: 71.2%;
+  left: 23%;
+  /* Position button to the middle horizontally */
+  transform: translate(-50%, -50%);
+  /* Center button */
+  /* Style your button further if needed */
+  padding: 3px 9px;
+  border: none;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.but-13 {
+  position: absolute;
+  /* Position button relative to .imageContainer */
+  top: 71.2%;
+  left: 37.5%;
+  /* Position button to the middle horizontally */
+  transform: translate(-50%, -50%);
+  /* Center button */
+  /* Style your button further if needed */
+  padding: 3px 9px;
+  border: none;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.but-14 {
+  position: absolute;
+  /* Position button relative to .imageContainer */
+  top: 71.2%;
+  left: 49.5%;
+  /* Position button to the middle horizontally */
+  transform: translate(-50%, -50%);
+  /* Center button */
+  /* Style your button further if needed */
+  padding: 3px 9px;
+  border: none;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.but-15 {
+  position: absolute;
+  /* Position button relative to .imageContainer */
+  top: 90.2%;
+  left: 15.5%;
+  /* Position button to the middle horizontally */
+  transform: translate(-50%, -50%);
+  /* Center button */
+  /* Style your button further if needed */
+  padding: 3px 9px;
+  border: none;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.but-16 {
+  position: absolute;
+  /* Position button relative to .imageContainer */
+  top: 90.2%;
+  left: 28%;
+  /* Position button to the middle horizontally */
+  transform: translate(-50%, -50%);
+  /* Center button */
+  /* Style your button further if needed */
+  padding: 3px 9px;
+  border: none;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.but-17 {
+  position: absolute;
+  /* Position button relative to .imageContainer */
+  top: 90.2%;
+  left: 40.5%;
+  /* Position button to the middle horizontally */
+  transform: translate(-50%, -50%);
+  /* Center button */
+  /* Style your button further if needed */
+  padding: 3px 9px;
+  border: none;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.but-18 {
+  position: absolute;
+  /* Position button relative to .imageContainer */
+  top: 90.2%;
+  left: 53%;
+  /* Position button to the middle horizontally */
+  transform: translate(-50%, -50%);
+  /* Center button */
+  /* Style your button further if needed */
+  padding: 3px 9px;
+  border: none;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.activeButton {
+  background-color: red !important;
+  /* Using !important to override any other conflicting styles */
+}
