--- a/frontend/src/styles/DishList.scss
+++ b/frontend/src/styles/DishList.scss
@@ -1,11 +1,3 @@
-ul {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
-  list-style: none;
-  padding: 0;
-}
-
 /* Style for each DishListItem */
 .border {
   border: solid;
@@ -29,6 +21,25 @@ ul {
 }
 
 .border h1 {
-  margin-left: 30%;
+  margin-left: 18%;
+}
 
+/* Add this style for aligning icons and buttons */
+.icon-button-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.center-content button {
+  margin: 12px;
+}
+
+ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  /* Display items in two columns */
+  gap: 20px;
+  list-style: none;
+  padding: 0;
 }
