--- a/frontend/src/styles/LoginModal.scss
+++ b/frontend/src/styles/LoginModal.scss
@@ -12,12 +12,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 1; 
 }
 
 .login-modal__form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 1; 
 }
 
 .login-modal__close {
