--- a/frontend/src/styles/Footer.scss
+++ b/frontend/src/styles/Footer.scss
@@ -19,12 +19,10 @@
 }
 
 .footer-bar__item {
-  line-height: 24px;
-  margin-left: 24px;
-  font-size: 18px;
-  text-decoration: none;
-  font-weight: 500;
-  color: #2b2b2b;
+  font-family: Bebas Neue;
+  text-transform: capitalize;
+  font-size: 45px;
+  color: black
 }
 
 i {
