--- a/frontend/src/styles/DishScroll2.scss
+++ b/frontend/src/styles/DishScroll2.scss
@@ -1,14 +1,10 @@
-.carousel-image {
-    // max-width: 1000px;  // Adjust the width as needed
-    // max-height: 1000px; // Adjust the height as needed
-  // object-fit: cover; // Maintain aspect ratio and cover container
-}
 
-.carousel-item {
-  margin: 0;
-  padding: 10px;
-}
 .carousel-container {
   overflow: hidden; /* Hide horizontal overflow */
   width: 100%; /* Ensure the container takes the full width of its parent */
+  max-height: 400px;
+}
+
+.img-styling{
+  padding: 5px;
 }
