--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -80,3 +80,22 @@
   padding: 25px;
   border: 1px solid;
 }
+
+.map-and-box-wrapper {
+  display: flex;
+  justify-content: space-between;
+  /* if you want space between the two boxes */
+  align-items: stretch;
+  /* make sure they align perfectly in height */
+}
+
+.box-container4 {
+  flex: 1 1;
+  max-width: 50%;
+  max-height: -moz-fit-content;
+  max-height: fit-content;
+  min-height: 308px;
+  min-width: 1076px;
+  padding: 25px;
+  border: 1px solid;
+}
