--- a/frontend/src/styles/OrderStatusModal.scss
+++ b/frontend/src/styles/OrderStatusModal.scss
@@ -1,5 +1,5 @@
 .border {
-  border: solid;
+  // border: solid;
   margin: 1.5rem;
   border-radius: 5%;
   border-width: thin;
@@ -29,3 +29,11 @@ table {
   max-height:100vh;}
   // height: 80%;
   // width: 55%;
+
+  .title{
+    border-bottom: solid;
+  }
+
+  .title-padding{
+    padding-top: 15px;
+  }
