Added styling to the dish list item and the routing for order now.

--- a/frontend/src/styles/DishListItem.scss
+++ b/frontend/src/styles/DishListItem.scss
@@ -7,6 +7,8 @@
 .img-size{
   width: 15rem;
   border-radius: 10%;
+  padding-left: 5px;
+  margin-top: 20px;
 }
 
 .side-by-side{
@@ -38,6 +40,7 @@ button{
   position:absolute;
   margin: 10px;
   border-radius: 5rem; 
+  margin-top: 25px;
 }
 
 .container-size{
