--- a/frontend/src/styles/MenuModal.scss
+++ b/frontend/src/styles/MenuModal.scss
@@ -11,20 +11,31 @@
   border-radius: 12px;
 }
 
-.modal-content img {
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; // to push image container to top and description to bottom
+  height: 100%; // ensure full height utilization
+}
+
+.modal-image-container img {
   margin-top: 40px;
   max-width: 90%;
   border-radius: 15px;
-
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.modal-content p {
-  font-size: 26px;
-  font-weight: 400;
-}
+.modal-description-container {
+  p {
+    font-size: 26px;
+    font-weight: 400;
+    margin-top: 16px;
+  }
 
-/* Add this CSS to your MenuModal.scss or your stylesheet */
-.heart-icon.favorite {
-  color: red;
-  /* Change the color to red when favorited */
+  .heart-icon.favorite {
+    color: red;
+    /* Change the color to red when favorited */
+  }
 }
