--- a/frontend/src/styles/PastOrderModal.scss
+++ b/frontend/src/styles/PastOrderModal.scss
@@ -17,8 +17,7 @@ table {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1; 
-  // max-height:100vh;
+  z-index: 1;
 }
 .modal-content{  
   border-radius: 12px;
@@ -26,6 +25,7 @@ table {
   position: absolute;
   overflow-y: scroll;
   display: flex;
-  max-height:100vh;}
+  max-height:100vh;
+}
   // height: 80%;
   // width: 55%;
