--- a/frontend/src/styles/MenuModal.scss
+++ b/frontend/src/styles/MenuModal.scss
@@ -1,14 +1,14 @@
 .modal-overlay {
   background-color: white;
-  box-shadow: 0 0 0 50vmax rgba(0, 0, 0, .5);
+  box-shadow: 0 0 0 50vmax rgba(0, 0, 0, 0.5);
   position: absolute;
-  top: 55%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -40%);
-  height: 80%;
-  width: 55%;
+  height: 70%;
+  width: 42%;
   overflow-y: scroll;
-  border-radius: 12px;
+  border-radius: 13px;
 }
 
 .modal-content {
