Fixed dishlist styling where four columns were showing up with a large horizonal scroll.

--- a/frontend/src/styles/DishList.scss
+++ b/frontend/src/styles/DishList.scss
@@ -1,9 +1,10 @@
-ul {
+.dish-list-grid {
   display: grid;
   grid-template-columns: repeat(3, 2fr); 
   gap: 5px; 
   list-style: none;
   padding: 0;
+  justify-items: center;
 }
 
 /* Style for each DishListItem */
