Fixed a bunch of styling where the nav bar was not consistent.

--- a/frontend/src/styles/DishListItem.scss
+++ b/frontend/src/styles/DishListItem.scss
@@ -21,6 +21,7 @@ button{
   display:flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
 }
 
 .container-size{
@@ -58,4 +59,8 @@ button{
 
 .padding{
   padding:2rem;
+}
+
+.favorite-button{
+  width: 100%
 }
