--- a/frontend/src/styles/DishScroll2.scss
+++ b/frontend/src/styles/DishScroll2.scss
@@ -1,7 +1,7 @@
 
 .carousel-container {
-  overflow: hidden; /* Hide horizontal overflow */
-  width: 100%; /* Ensure the container takes the full width of its parent */
+  overflow: hidden;
+  width: 100%;
   max-height: 400px;
 }
 
