--- a/frontend/src/styles/OrderStatusModal.scss
+++ b/frontend/src/styles/OrderStatusModal.scss
@@ -21,7 +21,7 @@ table {
   // max-height:100vh;
 }
 
-.modal-content {
+.order-status-modal-content {
   border-radius: 12px;
   background-color: white;
   position: absolute;
