--- a/frontend/src/styles/MenuModal.scss
+++ b/frontend/src/styles/MenuModal.scss
@@ -5,8 +5,8 @@
   top: 40%;
   left: 50%;
   transform: translate(-50%, -40%);
-  height: 70%;
-  width: 42%;
+  height: 90%;
+  width: 50%;
   overflow-y: scroll;
   border-radius: 13px;
 }
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between; // to push image container to top and description to bottom
-  height: 100%; // ensure full height utilization
+  // height: 100%; // ensure full height utilization
 }
 
 .modal-image-container img {
