--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -198,7 +198,6 @@
   margin-top: 4em;
   display: flex;
 
-
 }
 
 
@@ -210,8 +209,15 @@ hr {
 }
 
 div a {
-  font-family: Bebas Neue;
+  /* font-family: Bebas Neue;
   text-transform: capitalize;
   font-size: 40px;
+  color: black */
+}
+
+.link-font{
+  font-family: Bebas Neue;
+  text-transform: capitalize;
+  font-size: 30px;
   color: black
 }
