--- a/frontend/src/styles/DishListItem.scss
+++ b/frontend/src/styles/DishListItem.scss
@@ -34,7 +34,7 @@ button {
 .side-by-side {
   display: flex;
   flex-direction: row-reverse;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 
 .add-button {
@@ -62,7 +62,8 @@ button {
 }
 
 .favorite-button {
-  width: 100%
+  display: flex;
+    flex-direction: column;
 }
 
 .heart-icon.favorite {
