Styled dish list item more, added add button functionallity to clicking anywhere on the image, cursor added to nav bar selection and brought the modal exit button back in all of the modals.

--- a/frontend/src/styles/OrderModal.scss
+++ b/frontend/src/styles/OrderModal.scss
@@ -19,6 +19,7 @@
 
 .order-modal__close {
   background-color: white;
+  color: black;
   border: none;
   text-align: center;
   text-decoration: none;
