--- a/frontend/src/styles/DishListItem.scss
+++ b/frontend/src/styles/DishListItem.scss
@@ -5,9 +5,8 @@
 }
 
 .img-size {
-  width: 15rem;
+  width: 14rem;
   border-radius: 10%;
-  padding-left: 5px;
   margin-top: 20px;
 }
 
@@ -35,6 +34,7 @@ button {
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-evenly;
+  padding-bottom: 2px;
 }
 
 .add-button {
@@ -70,3 +70,46 @@ button {
   color: red;
   /* Change the color to red when favorited */
 }
+
+.dish-item-border {
+  border: solid;
+  margin: 1rem;
+  border-radius: 5.0%;
+  border-width: thin;
+  height: 12rem;
+  padding: 12.5px;
+  transition: box-shadow 0.3s; 
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.7); 
+
+  &:hover {
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.7); 
+  }
+}
+
+.link-font-item{
+  font-family: Bebas Neue;
+  text-transform: capitalize;
+  font-size: 22px;
+  color: black
+}
+
+.dish-item-text{
+  display: block;
+  padding-bottom: 5px;
+}
+
+.description-text{
+  font-size: 15px
+}
+
+button{margin: 8px;
+    font-size: 0.875rem;
+    line-height: 1.5;
+    background-color: rgba(0, 0, 255, 0.5);
+    color: white;
+    border-radius: 8px;
+    font-weight: 600;
+    padding: 4px 8px;
+    cursor: pointer;
+    transition: all 150ms ease;
+    border: none;}
