--- a/frontend/src/styles/TopNavigationBar.scss
+++ b/frontend/src/styles/TopNavigationBar.scss
@@ -48,3 +48,7 @@
   font-size: 20px;
   text-decoration: none;
 }
+
+.cursor-for-items{
+  cursor: pointer; /* Change the cursor to a pointer on hover */
+}
