--- a/frontend/src/styles/Contact.scss
+++ b/frontend/src/styles/Contact.scss
@@ -21,8 +21,8 @@ button {
   margin: 8px;
   font-size: 0.875rem;
   line-height: 1.5;
-  background-color: rgba(0, 0, 255, 0.500);
-  color: white;
+  background-color: #3882F6;
+  color: #E5E7EB;
   border-radius: 8px;
   font-weight: 600;
   padding: 8px 16px;
