--- a/frontend/src/styles/TableListItem.scss
+++ b/frontend/src/styles/TableListItem.scss
@@ -10,7 +10,7 @@
   margin: 8px;
   font-size: 0.875rem;
   line-height: 1.5;
-  background-color: blue;
+  background-color: #3882F6;
   color: white;
   border-radius: 8px;
   font-weight: 600;
@@ -60,7 +60,7 @@
   margin: 8px;
   font-size: 0.875rem;
   line-height: 1.5;
-  background-color: blue;
+  background-color: #3882F6;
   color: white;
   border-radius: 8px;
   font-weight: 600;
