--- a/frontend/src/styles/TopNavigationBar.scss
+++ b/frontend/src/styles/TopNavigationBar.scss
@@ -8,12 +8,13 @@
   -moz-box-shadow: 0 4px 6px -6px #222;
   box-shadow: 0 4px 6px -6px #222;
   height: 72px;
+  background-color: #060A0D;
 }
 
 .top-nav-bar__logo {
   font-weight: 500;
-  font-size: 40px;
-  color: #111;
+  font-size: 24px;
+  color: #E5E7EB;
   text-underline-position: auto;
   margin-left: 24px;
   font-family: Bebas Neue;
@@ -23,10 +24,10 @@
 .top-nav-bar__item {
   line-height: 24px;
   margin-left: 24px;
-  font-size: 20px;
+  font-size: 18x;
   text-decoration: none;
   font-weight: 500;
-  color: #2b2b2b;
+  color: #E5E7EB;
 }
 
 .top-nav-bar__routes {
@@ -38,13 +39,11 @@
 }
 
 .nav-text {
-  color: #333; 
-  font-size: 18px; 
+  color: #333;
+  font-size: 18px;
 }
 
 
 .nav-link {
-  color: #333;
-  font-size: 20px;
   text-decoration: none;
 }
